--- a/SteamBot/KeyBot.csproj
+++ b/SteamBot/KeyBot.csproj
@@ -53,14 +53,14 @@
     <Reference Include="mscorlib" />
     <Reference Include="System.IO.Compression" />
     <Reference Include="System.Collections" />
-    <Reference Include="Newtonsoft.Json">
-      <HintPath>..\packages\Newtonsoft.Json.8.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+    <Reference Include="SteamAuth">
+      <HintPath>..\packages\SteamAuth.1.1.0\lib\net45\SteamAuth.dll</HintPath>
+    </Reference>
+    <Reference Include="Newtonsoft">
+      <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="SteamKit2">
-      <HintPath>..\packages\SteamKit2.1.6.5\lib\net40\SteamKit2.dll</HintPath>
-    </Reference>
-    <Reference Include="SteamAuth">
-      <HintPath>..\packages\SteamAuth.1.0.1\lib\net45\SteamAuth.dll</HintPath>
+      <HintPath>..\packages\SteamKit2.1.8.1\lib\net45\SteamKit2.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
